[project]
name = "wab.hello-world"
version = "1.0.0"
description = "Simple hello wolrd service"
authors = [
    {name = "Jan Kolomazník",email = "jan.kolomaznik@gmail.com"},
]
dependencies = [
    "fastapi>=0.103.2",
    "uvicorn[standard]>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn main:app --reload"
test = "pytest"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
]
